fix mascot's z-index

--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ section#docs {
 
     top: 50%;
     transform: translate(0, -50%);
+    z-index: 2;
 }
 
 #mascot img {
